frontend/src/App.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
}

.leaflet-container {
  height: 93vh;
  flex: 1 1 0%;
  width: 100%;
  z-index: 1;
}
.headerHeight {
}
.belowHeader {
  position: absolute;
  top: 3.4rem; /* header height */
  right: 0;
  left: 0;
  bottom: 0;
  overflow: auto;
  background-color: #cbd5e1;
}

h1 {
  font-size: 2.4em;
  line-height: 1.4em;
}
h2 {
  font-size: 2em;
  line-height: 1.3em;
}
h3 {
  font-size: 1.5em;
  line-height: 1.2em;
}
h4 {
  font-size: 1.2em;
  line-height: 1.1em;
}
h5 {
  font-size: 1em;
  line-height: 1em;
}
h6 {
  font-size: 0.75em;
  line-height: 1em;
}
button {
  background-color: whitesmoke;
  border: 0.1rem solid gray;
  border-radius: 0.4rem;

  color: black;

  padding: 0.15rem;
  line-break: none;

  display: inline-flex;
  align-items: center;
  justify-content: center;
}
button:disabled {
  text-decoration: wavy;
  opacity: 0.4;
}
.accountPfp {
  --diameter: 3.3em;
  border-radius: var(--diameter);
  height: var(--diameter);
  width: var(--diameter);
}
.isFav {
  background-color: gold;
}
td {
  padding: 0.2em;
  border: solid black 0.2em;
  background-color: whitesmoke;
}
input {
  border: solid gray 0.1rem;
  border-radius: 0.5rem;
  padding: 0.2rem;
}

.howToSect {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;

  margin-bottom: 4em;

  background-color: #cbd5e1;
}
.howToSect > div > p {
  margin-left: 1em;
  margin-top: 0.5em;
}
.howToSectSingle {
  margin-top: 1em;
}

